--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
 	"license": "MIT",
 	"require": {
 		"laravel/framework": "4.2.*",
-		"facebook/php-sdk-v4": "4.0.*"
+		"marwelln/recaptcha": "dev-master"
 	},
 	"autoload": {
 		"classmap": [
